# OpenGL-Framework

./: CMakeLists.txt  LICENSE  OpenGLNotes.cpp  Program.cs  README.md
Header/: Camera.h  CommonValues.h  DirectionalLight.h  Light.h  Material.h  Mesh.h  Model.h  Scene.h  Shader.h  Texture.h  Utility.h
Header/Lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
Header/Scene/: Skybox.h
Header/Shader/: ShaderProgram.h
Header/Shadows/: OmniShadowMap.h  ShadowMap.h
Resources/Models/Model/: 12334_statue_v1_l3.mtl  uploads_files_2809625_Light.mtl
Resources/Models/Trees/: Tree1.mtl
Shaders/: Skybox.vert  directional_shadow_map.vert  omni_shadow_map.frag  omni_shadow_map.geom  omni_shadow_map.vert  shader.frag  shader.vert
Source/: Camera.cpp  DirectionalLight.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Utility.cpp  glad.c  glad.h  main.cpp  shader.cpp  shader.h
Source/Lights/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
Source/Scene/: Skybox.cpp
Source/Shader/: ShaderProgram.cpp
Source/Shadows/: OmniShadowMap.cpp  ShadowMap.cpp
